# tpRigToolkit-tools-romgenerator

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
docs/sphinx/: conf.py  index.rst
tests/: test_general.py
tpRigToolkit/: __init__.py
tpRigToolkit/tools/: __init__.py
tpRigToolkit/tools/romgenerator/: __init__.py  __logging__.ini  __version__.py  _version.py  loader.py  romgenerator.py
tpRigToolkit/tools/romgenerator/core/: client.py  consts.py  controller.py  model.py  tool.py  toolset.py  view.py
tpRigToolkit/tools/romgenerator/dccs/maya/: server.py
