[metadata]
name = tpRigToolkit-tools-romgenerator
description = Tool to easily creator Range of Motion animations to easily test deformations
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-romgenerator

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core

[options.extras_require]
dev = wheel

test = pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/tools/romgenerator/_version.py
versionfile_build = tpRigToolkit/tools/romgenerator/_version.py
tag_prefix = releases/
parentdir_prefix = tpRigToolkit-tools-romgenerator-releases-